--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -3,7 +3,7 @@
    Dashboard
 </h3>
 <!-- START widgets box-->
-<div class="row">
+<div class="row" ng-controller="DashboardController">
    <div class="col-lg-3 col-sm-6">
       <!-- START widget-->
       <div class="panel widget bg-success">
@@ -12,8 +12,18 @@
                <em class="icon-check fa-3x"></em>
             </div>
             <div class="col-xs-8 pv-lg">
-               <div class="h2 mt0">3
-                  <small>application</small></div>
+               <div class="h2 mt0">{{statistics.applications.online}}
+                  <div ng-hide="statistics" class="inline">
+                     <div class="sk-spinner sk-spinner-circle">
+                        <div
+                           ng-repeat="n in [].constructor(12) track by $index"
+                           ng-bind=""
+                           class="sk-circle{{$index + 1}} sk-circle"
+                        ></div>
+                     </div>
+                  </div>
+                  <small>application<span ng-if="statistics.applications.online > 1">s</span></small>
+               </div>
                <div class="text-uppercase">Online</div>
             </div>
          </div>
@@ -27,8 +37,17 @@
                <em class="fa fa-warning fa-3x"></em>
             </div>
             <div class="col-xs-8 pv-lg">
-               <div class="h2 mt0">1
-                  <small>application</small>
+               <div class="h2 mt0">{{statistics.applications.hasProblems}}
+                  <div ng-hide="statistics" class="inline">
+                     <div class="sk-spinner sk-spinner-circle">
+                        <div
+                           ng-repeat="n in [].constructor(12) track by $index"
+                           ng-bind=""
+                           class="sk-circle{{$index + 1}} sk-circle"
+                        ></div>
+                     </div>
+                  </div>
+                  <small>application<span ng-if="statistics.applications.hasProblems > 1">s</span></small>
                </div>
                <div class="text-uppercase">Problem</div>
             </div>
@@ -43,8 +62,17 @@
                <em class="icon-ban fa-3x"></em>
             </div>
             <div class="col-xs-8 pv-lg">
-               <div class="h2 mt0">1
-                  <small>application</small>
+               <div class="h2 mt0">{{statistics.applications.hasErrors}}
+                  <div ng-hide="statistics" class="inline">
+                     <div class="sk-spinner sk-spinner-circle">
+                        <div
+                                ng-repeat="n in [].constructor(12) track by $index"
+                                ng-bind=""
+                                class="sk-circle{{$index + 1}} sk-circle"
+                        ></div>
+                     </div>
+                  </div>
+                  <small>application<span ng-if="statistics.applications.hasErrors > 1">s</span></small>
                </div>
                <div class="text-uppercase">Error</div>
             </div>
@@ -59,8 +87,17 @@
                <em class="icon-lock fa-3x"></em>
             </div>
             <div class="col-xs-8 pv-lg">
-               <div class="h2 mt0">0
-                  <small>applications</small>
+               <div class="h2 mt0">{{statistics.applications.disabled}}
+                  <div ng-hide="statistics" class="inline">
+                     <div class="sk-spinner sk-spinner-circle">
+                        <div
+                                ng-repeat="n in [].constructor(12) track by $index"
+                                ng-bind=""
+                                class="sk-circle{{$index + 1}} sk-circle"
+                        ></div>
+                     </div>
+                  </div>
+                  <small>application<span ng-if="statistics.applications.disabled > 1">s</span></small>
                </div>
                <div class="text-uppercase">Disabled</div>
             </div>
