AC-163 Translate dashboard

--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -1,4 +1,4 @@
-<h3>
+<h3 translate="admin.dashboard.DASHBOARD">
    <em class="icon-speedometer mr"></em>
    Dashboard
 </h3>
@@ -13,8 +13,9 @@
             </div>
             <div class="col-xs-8 pv-lg">
                <div class="h2 mt0">3
-                  <small>application</small></div>
-               <div class="text-uppercase">Online</div>
+                  <small translate="admin.dashboard.application.APPLICATION">application</small>
+               </div>
+               <div translate="admin.dashboard.application.ONLINE" class="text-uppercase">Online</div>
             </div>
          </div>
       </div>
@@ -28,7 +29,7 @@
             </div>
             <div class="col-xs-8 pv-lg">
                <div class="h2 mt0">1
-                  <small>application</small>
+                  <small translate="admin.dashboard.application.APPLICATION">application</small>
                </div>
                <div class="text-uppercase">Problem</div>
             </div>
@@ -44,9 +45,9 @@
             </div>
             <div class="col-xs-8 pv-lg">
                <div class="h2 mt0">1
-                  <small>application</small>
+                  <small translate="admin.dashboard.application.APPLICATION">application</small>
                </div>
-               <div class="text-uppercase">Error</div>
+               <div translate="admin.dashboard.application.ERROR" class="text-uppercase">Error</div>
             </div>
          </div>
       </div>
