AC-165 Adapt user profile

--- a/web/assets/source/html/ngdialog/profile.html
+++ b/web/assets/source/html/ngdialog/profile.html
@@ -1,4 +1,4 @@
-<div ng-class="{'whirl traditional': inLoading}" class="ngdialog-content">
+<div ng-class="{'whirl traditional': inLoading}">
 
 	<div ng-repeat="error in errors track by $index" class="alert alert-danger text-center">{{ error }}</div>
 
