--- a/web/assets/source/html/users/login.html
+++ b/web/assets/source/html/users/login.html
@@ -54,7 +54,7 @@
 					<div class="pull-right"><a ui-sref="resetting" class="text-muted">Forgot your password?</a></div>
 				</div>
 
-				<button type="submit" class="btn btn-block btn-primary mt-lg">Login</button>
+				<button ng-disabled="!form.$valid || inLoading" type="submit" class="btn btn-block btn-primary mt-lg">Login</button>
 
 			</form>
 
