--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -125,7 +125,7 @@
 	<!-- END widgets box-->
 
 
-	<div class="row">
+	<div class="row" ng-controller="ChartDaylyApplicationStatusesController">
 		<div class="col-md-6">
 			<div id="panelChart5" class="panel panel-default">
 				<div class="panel-heading">
@@ -137,7 +137,7 @@
 				</div>
 				<div collapse="panelChart5" class="panel-wrapper">
 					<div class="panel-body">
-						<div ng-controller="ChartDaylyApplicationStatusesController" class="container-fluid">
+						<div class="container-fluid">
 							<div class="row mb-lg">
 								<div class="col-lg-12">
 									<div>
@@ -156,7 +156,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<!-- START widget-->
-					<div ng-controller="FlotChartController as chart" class="container-fluid">
+					<div class="container-fluid">
 						<div id="panelChart1" class="panel panel-default">
 							<div class="panel-heading">
 								<paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
@@ -167,7 +167,7 @@
 							</div>
 							<div collapse="panelChart1" class="panel-wrapper">
 								<div class="panel-body">
-									<flot dataset="chart.lineData" options="chart.lineOptions" height="300px"></flot>
+									<flot dataset="lineData" options="lineOptions" height="300px"></flot>
 								</div>
 							</div>
 						</div>
