--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -46,7 +46,7 @@
 					</div>
 					<div class="col-xs-8 pv-lg">
 						<div class="h2 mt0">{{statistics.applicationsState.hasProblems}}
-							<div ng-hide="statistics" class="inline">
+							<div ng-hide="true" class="inline">
 								<div class="sk-spinner sk-spinner-circle">
 									<div
 											ng-repeat="n in [].constructor(12) track by $index"
@@ -125,8 +125,8 @@
 	<!-- END widgets box-->
 
 
-	<div class="row" ng-controller="ChartDaylyApplicationStatusesController">
-		<div class="col-md-6">
+	<div class="row">
+		<div class="col-md-6" ng-controller="ChartDaylyApplicationStatusesController">
 			<div id="panelChart5" class="panel panel-default">
 				<div class="panel-heading">
 					<paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
@@ -151,7 +151,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-6">
+		<div class="col-lg-6" ng-controller="ChartAverageApplicationStatusesController">
 			<!-- START chart-->
 			<div class="row">
 				<div class="col-lg-12">
