AC-164 Connect application status charts

--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -127,7 +127,7 @@
 
 
     <div class="row">
-        <div class="col-md-6" ng-controller="AppStatusesChartCtrl">
+        <div class="col-md-6" ng-controller="AppStatusesChartController">
             <div id="panelChart5" class="panel panel-default traditional whirl">
                 <div class="panel-heading">
                     <paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
@@ -159,7 +159,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-6" ng-controller="StateAvgAppChartCtrl">
+        <div class="col-lg-6" ng-controller="StateAvgAppChartController">
             <!-- START chart-->
             <div class="row">
                 <div class="col-lg-12">
