--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -128,7 +128,7 @@
 
     <div class="row">
         <div class="col-md-6" ng-controller="AppStatusesChartController">
-            <div id="panelChart5" class="panel panel-default traditional whirl">
+            <div id="panelChart5" class="panel panel-default" ng-class="{'traditional whirl' : onLoading}">
                 <div class="panel-heading">
                     <paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
                     <div class="panel-title">
@@ -165,7 +165,7 @@
                 <div class="col-lg-12">
                     <!-- START widget-->
                     <div class="container-fluid">
-                        <div id="panelChart1" class="panel panel-default traditional whirl">
+                        <div id="panelChart1" class="panel panel-default" ng-class="{'traditional whirl' : onLoading}">
                             <div class="panel-heading">
                                 <paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
                                 <div class="panel-title">
