--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -8,16 +8,16 @@
 	<div class="col-lg-3 col-sm-6">
 		<!-- START widget-->
 		<div
-			ng-class="{true: 'bg-success', false: 'white'}[statistics.applications.online > 0]"
+			ng-class="{true: 'bg-success', false: 'white'}[statistics.applicationsState.online > 0]"
 			class="panel widget">
 			<div class="row row-table">
 				<div
-					ng-class="{true: 'bg-success-dark', false: 'bg-success'}[statistics.applications.online > 0]"
+					ng-class="{true: 'bg-success-dark', false: 'bg-success'}[statistics.applicationsState.online > 0]"
 					class="col-xs-4 text-center pv-lg">
 					<em class="icon-check fa-3x"></em>
 				</div>
 				<div class="col-xs-8 pv-lg">
-					<div class="h2 mt0">{{statistics.applications.online}}
+					<div class="h2 mt0">{{statistics.applicationsState.online}}
 						<div ng-hide="statistics" class="inline">
 							<div class="sk-spinner sk-spinner-circle">
 								<div
@@ -27,7 +27,7 @@
 								</div>
 							</div>
 						</div>
-						<small>application<span ng-if="statistics.applications.online > 1">s</span></small>
+						<small>application<span ng-if="statistics.applicationsState.online > 1">s</span></small>
 					</div>
 					<div class="text-uppercase">Online</div>
 				</div>
@@ -37,16 +37,16 @@
 	<div class="col-lg-3 col-sm-6">
 		<!-- START widget-->
 		<div
-			ng-class="{true: 'bg-warning', false: 'white'}[statistics.applications.hasProblems > 0]"
+			ng-class="{true: 'bg-warning', false: 'white'}[statistics.applicationsState.hasProblems > 0]"
 			class="panel widget">
 			<div class="row row-table">
 				<div
-					ng-class="{true: 'bg-warning-dark', false: 'bg-warning'}[statistics.applications.hasProblems > 0]"
+					ng-class="{true: 'bg-warning-dark', false: 'bg-warning'}[statistics.applicationsState.hasProblems > 0]"
 					class="col-xs-4 text-center bg-warning-dark pv-lg">
 					<em class="fa fa-warning fa-3x"></em>
 				</div>
 				<div class="col-xs-8 pv-lg">
-					<div class="h2 mt0">{{statistics.applications.hasProblems}}
+					<div class="h2 mt0">{{statistics.applicationsState.hasProblems}}
 						<div ng-hide="statistics" class="inline">
 							<div class="sk-spinner sk-spinner-circle">
 								<div
@@ -56,7 +56,7 @@
 								></div>
 							</div>
 						</div>
-						<small>application<span ng-if="statistics.applications.hasProblems > 1">s</span></small>
+						<small>application<span ng-if="statistics.applicationsState.hasProblems > 1">s</span></small>
 					</div>
 					<div class="text-uppercase">Problem</div>
 				</div>
@@ -66,16 +66,16 @@
 	<div class="col-lg-3 col-md-6 col-sm-12">
 		<!-- START widget-->
 		<div
-			ng-class="{true: 'bg-danger', false: 'white'}[statistics.applications.hasErrors > 0]"
+			ng-class="{true: 'bg-danger', false: 'white'}[statistics.applicationsState.hasErrors > 0]"
 			class="panel widget">
 			<div class="row row-table">
 				<div
-					ng-class="{true: 'bg-danger-dark', false: 'bg-danger'}[statistics.applications.hasErrors > 0]"
+					ng-class="{true: 'bg-danger-dark', false: 'bg-danger'}[statistics.applicationsState.hasErrors > 0]"
 					class="col-xs-4 text-center bg-danger-dark pv-lg">
 					<em class="icon-ban fa-3x"></em>
 				</div>
 				<div class="col-xs-8 pv-lg">
-					<div class="h2 mt0">{{statistics.applications.hasErrors}}
+					<div class="h2 mt0">{{statistics.applicationsState.hasErrors}}
 						<div ng-hide="statistics" class="inline">
 							<div class="sk-spinner sk-spinner-circle">
 								<div
@@ -85,7 +85,7 @@
 								></div>
 							</div>
 						</div>
-						<small>application<span ng-if="statistics.applications.hasErrors > 1">s</span></small>
+						<small>application<span ng-if="statistics.applicationsState.hasErrors > 1">s</span></small>
 					</div>
 					<div class="text-uppercase">Error</div>
 				</div>
@@ -95,16 +95,16 @@
 	<div class="col-lg-3 col-md-6 col-sm-12">
 		<!-- START date widget-->
 		<div
-			ng-class="{true: 'bg-gray', false: 'white'}[statistics.applications.disabled > 0]"
+			ng-class="{true: 'bg-gray', false: 'white'}[statistics.applicationsState.disabled > 0]"
 			class="panel widget">
 			<div class="row row-table">
 				<div
-					ng-class="{true: 'bg-gray-dark', false: 'bg-gray'}[statistics.applications.disabled > 0]"
+					ng-class="{true: 'bg-gray-dark', false: 'bg-gray'}[statistics.applicationsState.disabled > 0]"
 					class="col-xs-4 text-center bg-gray pv-lg">
 					<em class="icon-lock fa-3x"></em>
 				</div>
 				<div class="col-xs-8 pv-lg">
-					<div class="h2 mt0">{{statistics.applications.disabled}}
+					<div class="h2 mt0">{{statistics.applicationsState.disabled}}
 						<div ng-hide="statistics" class="inline">
 							<div class="sk-spinner sk-spinner-circle">
 								<div
@@ -114,7 +114,7 @@
 								></div>
 							</div>
 						</div>
-						<small>application<span ng-if="statistics.applications.disabled > 1">s</span></small>
+						<small>application<span ng-if="statistics.applicationsState.disabled > 1">s</span></small>
 					</div>
 					<div class="text-uppercase">Disabled</div>
 				</div>
