--- a/web/assets/source/html/locales.html
+++ b/web/assets/source/html/locales.html
@@ -1,12 +1,90 @@
-<div>
-	<h1>Locales</h1>
-</div>
+<h3>
+	<em class="fa fa-language mr"></em>
+	Locales
+</h3>
 
 <div ng-controller="LocalesController">
 
+	<div id="filters.panel" class="panel panel-default">
+		<div class="panel-heading">
+			<paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
+			<h3 class="panel-title">
+				<em class="fa fa-filter mr-sm"></em>
+				Filters
+			</h3>
+		</div>
+		<form method="get" class="form-horizontal">
+			<div collapse="filters.panel" class="panel-wrapper">
+				<div class="panel-body pb">
+					<div class="row">
+						<div class="col-lg-10">
+							<div class="row">
+								<div class="col-lg-6">
+									<div class="form-group">
+										<label for="input-id-1" class="col-sm-4 control-label">Label focus</label>
+										<div class="col-sm-8">
+											<input id="input-id-1" type="text" class="form-control" />
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6">
+									<div class="form-group">
+										<label class="col-sm-4 control-label">Select</label>
+										<div class="col-sm-8">
+											<select name="account" class="form-control">
+												<option>Option 1</option>
+												<option>Option 2</option>
+												<option>Option 3</option>
+												<option>Option 4</option>
+											</select>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6">
+									<div class="form-group">
+										<label class="col-sm-4 control-label">Chosen Ajax</label>
+										<div class="col-sm-8">
+											<select chosen="" ng-model="state" ng-options="s for s in form.states" width="'100%'" class="chosen-select input-md">
+												<option value=""></option>
+											</select>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6">
+									<div class="form-group">
+										<label class="col-sm-4 control-label">Chosen Ajax</label>
+										<div class="col-sm-8">
+											<select chosen="" ng-model="state" ng-options="s for s in form.states" width="'100%'" class="chosen-select input-md">
+												<option value=""></option>
+											</select>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-2 text-center">
+							<fieldset>
+								<div class="form-group">
+									<button type="submit" class="btn btn-default">
+										<em class="icon-refresh mr-sm"></em>
+										Reset
+									</button>
+									<button type="submit" class="btn btn-primary">
+										<em class="icon-magnifier mr-sm"></em>
+										Search
+									</button>
+								</div>
+							</fieldset>
+						</div>
+					</div>
+				</div>
+			</div>
+		</form>
+	</div>
+
 	<div class="panel panel-default">
 
-		<script type="text/ng-template" id="locales-actions">
+		<widget ng-hide="true" id="locales-actions">
 			<div dropdown="dropdown" class="btn-group">
 				<button type="button" ng-disabled="disabled" dropdown-toggle="" class="btn btn-xs dropdown-toggle btn-default" tooltip="Actions">
 					<em class="icon-settings"></em>
@@ -47,18 +125,57 @@
 					</li>
 				</ul>
 			</div>
-		</script>
+		</widget>
 
-		<script type="text/ng-template" id="locales-checkbox">
+		<widget ng-hide="true" id="locales-checkbox">
 			<div class="checkbox c-checkbox needsclick m0">
 				<label class="needsclick">
 					<input type="checkbox" value="" class="needsclick"/>
 					<span class="fa fa-check mr0"></span>
 				</label>
 			</div>
-		</script>
+		</widget>
 
-		<div ng-class="{'whirl traditional': !dt.initialized}" class="panel-body">
+		<div class="panel-heading pb0">
+			<div class="row mt-sm mb0">
+				<div class="col-xs-6">
+					<h3 class="panel-title mt">
+						<em class="icon-layers mr-sm"></em>
+						Data list
+					</h3>
+				</div>
+
+				<div class="col-xs-6">
+					<div class="btn-group pull-right">
+						<button type="button" class="btn btn-sm btn-danger" tooltip="Delete users">
+							<em class="icon-user-unfollow"></em>
+						</button>
+					</div>
+					<div class="btn-group pull-right mr">
+						<button type="button" class="btn btn-sm btn-primary" tooltip="Reset password">
+							<em class="icon-key"></em>
+						</button>
+					</div>
+					<div class="btn-group pull-right mr">
+						<button type="button" class="btn btn-sm btn-default" tooltip="Enable users">
+							<em class="icon-lock-open"></em>
+						</button>
+						<button type="button" class="btn btn-sm btn-default" tooltip="Disable users">
+							<em class="icon-lock"></em>
+						</button>
+					</div>
+					<div class="btn-group pull-right mr">
+						<button type="button" class="btn btn-sm btn-success" tooltip="Add new user">
+							<em class="icon-user-follow"></em>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<hr class="mb0 mt-lg">
+
+		<div ng-class="{'p-xl whirl traditional': !dt.initialized}" class="panel-body">
 
 			<table
 				ng-if="dt.initialized"
@@ -67,16 +184,18 @@
 				class="table-bordered table-striped hover"
 				cellspacing="0">
 				<thead>
-				<th ng-repeat="column in dt.columns" class="bt0 bl0">{{ column }}</th>
-				<th data-sortable="false" class="bt0 bl0" width="1"></th>
-				<th data-sortable="false" class="bt0 bl0 text-center" width="1">
-					<div class="checkbox c-checkbox needsclick m0">
-						<label class="needsclick">
-							<input type="checkbox" value="" class="needsclick"/>
-							<span class="fa fa-check mr0"></span>
-						</label>
-					</div>
-				</th>
+				<tr>
+					<th ng-repeat="column in dt.columns" class="bt0 bl0">{{ column }}</th>
+					<th data-sortable="false" class="bt0 bl0" width="1"></th>
+					<th data-sortable="false" class="bt0 bl0 text-center" width="1">
+						<div class="checkbox c-checkbox needsclick m0">
+							<label class="needsclick">
+								<input type="checkbox" value="" class="needsclick"/>
+								<span class="fa fa-check mr0"></span>
+							</label>
+						</div>
+					</th>
+				</tr>
 				</thead>
 			</table>
 
