--- a/web/assets/source/html/locales.html
+++ b/web/assets/source/html/locales.html
@@ -22,41 +22,18 @@
 								<div class="col-lg-6">
 									<div class="form-group">
 										<label for="input-id-1" class="col-sm-4 control-label">Label focus</label>
+
 										<div class="col-sm-8">
-											<input id="input-id-1" type="text" class="form-control" />
+											<input id="input-id-1" type="text" class="form-control"/>
 										</div>
 									</div>
 								</div>
 								<div class="col-lg-6">
 									<div class="form-group">
 										<label class="col-sm-4 control-label">Select</label>
+
 										<div class="col-sm-8">
-											<select name="account" class="form-control">
-												<option>Option 1</option>
-												<option>Option 2</option>
-												<option>Option 3</option>
-												<option>Option 4</option>
-											</select>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<label class="col-sm-4 control-label">Chosen Ajax</label>
-										<div class="col-sm-8">
-											<select chosen="" ng-model="state" ng-options="s for s in form.states" width="'100%'" class="chosen-select input-md">
-												<option value=""></option>
-											</select>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<label class="col-sm-4 control-label">Chosen Ajax</label>
-										<div class="col-sm-8">
-											<select chosen="" ng-model="state" ng-options="s for s in form.states" width="'100%'" class="chosen-select input-md">
-												<option value=""></option>
-											</select>
+											<select name="account" class="form-control"></select>
 										</div>
 									</div>
 								</div>
@@ -86,7 +63,8 @@
 
 		<widget ng-hide="true" id="locales-actions">
 			<div dropdown="dropdown" class="btn-group">
-				<button type="button" ng-disabled="disabled" dropdown-toggle="" class="btn btn-xs dropdown-toggle btn-default" tooltip="Actions">
+				<button type="button" ng-disabled="disabled" dropdown-toggle=""
+						class="btn btn-xs dropdown-toggle btn-default" tooltip="Actions">
 					<em class="icon-settings"></em>
 				</button>
 				<ul role="menu" class="dropdown-menu dropdown-menu-right">
@@ -138,6 +116,7 @@
 
 		<div class="panel-heading pb0">
 			<div class="row mt-sm mb0">
+
 				<div class="col-xs-6">
 					<h3 class="panel-title mt">
 						<em class="icon-layers mr-sm"></em>
@@ -170,10 +149,17 @@
 						</button>
 					</div>
 				</div>
+
 			</div>
 		</div>
 
 		<hr class="mb0 mt-lg">
+
+		<div ng-show="errors.length > 0" class="p-lg">
+			<div class="mb0 alert alert-danger">
+				<div ng-repeat="error in errors track by $index">{{ $index }}. {{ error }}</div>
+			</div>
+		</div>
 
 		<div ng-class="{'p-xl whirl traditional': !dt.initialized}" class="panel-body">
 
