--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -195,12 +195,12 @@
 
     <div class="row">
         <!-- START dashboard main content-->
-        <div class="col-lg-9">
+        <div class="col-lg-9" ng-controller="ClusterLoadAverageController">
             <!-- START chart-->
             <div class="row">
                 <div class="col-lg-12">
                     <!-- START widget-->
-                    <div id="panelChart9" class="panel panel-default">
+                    <div id="panelChart9" class="panel panel-default" ng-class="{'traditional whirl' : onLoading}">
                         <div class="panel-heading">
                             <paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
                             <div class="panel-title">
@@ -210,7 +210,7 @@
                         </div>
                         <div collapse="panelChart9" class="panel-wrapper">
                             <div class="panel-body">
-                                <flot dataset="dash.splineData" options="dash.splineOptions" class="ng-isolate-scope"
+                                <flot dataset="splineData" options="splineOptions" class="ng-isolate-scope"
                                       height="300px"></flot>
                             </div>
                         </div>
@@ -221,8 +221,8 @@
             <!-- END chart-->
         </div>
         <div class="col-lg-3">
-            <div ng-controller="FlotChartController as chart" class="container-fluid">
-                <div id="panelChart2" class="panel panel-default">
+            <div ng-controller="UpTimeClusterController" class="container-fluid">
+                <div id="panelChart2" class="panel panel-default" ng-class="{'traditional whirl' : onLoading}">
                     <div class="panel-heading">
                         <paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
                         <div class="panel-title">
@@ -232,7 +232,7 @@
                     </div>
                     <div collapse="panelChart2" class="panel-wrapper">
                         <div class="panel-body">
-                            <flot dataset="chart.barData" options="chart.barOptions" height="300px"></flot>
+                            <flot dataset="barData" options="barOptions" height="300px"></flot>
                         </div>
                     </div>
                 </div>
