--- a/web/assets/source/html/locales.html
+++ b/web/assets/source/html/locales.html
@@ -168,15 +168,16 @@
 				datatable="locales"
 				dt-options="dt.options"
 				class="table-bordered table-striped hover"
-				cellspacing="0">
+				cellspacing="0"
+				ng-click="onTableClickEvent($event)">
 				<thead>
 				<tr>
 					<th ng-repeat="column in dt.columns" class="bt0 bl0">{{ column }}</th>
 					<th data-sortable="false" class="bt0 bl0" width="1"></th>
-					<th data-sortable="false" class="bt0 bl0 text-center" width="1">
+					<th data-sortable="false" class="bt0 bl0 p text-center" width="1">
 						<div class="checkbox c-checkbox needsclick m0">
 							<label class="needsclick">
-								<input type="checkbox" value="" class="needsclick"/>
+								<input type="checkbox" value="" class="needsclick" rel="select-all" />
 								<span class="fa fa-check mr0"></span>
 							</label>
 						</div>
