--- a/web/assets/source/html/locales.html
+++ b/web/assets/source/html/locales.html
@@ -5,59 +5,59 @@
 
 <div ng-controller="LocalesController">
 
-	<div id="filters.panel" class="panel panel-default">
-		<div class="panel-heading">
-			<paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
-			<h3 class="panel-title">
-				<em class="fa fa-filter mr-sm"></em>
-				Filters
-			</h3>
-		</div>
-		<form method="get" class="form-horizontal">
-			<div collapse="filters.panel" class="panel-wrapper">
-				<div class="panel-body pb">
-					<div class="row">
-						<div class="col-lg-10">
-							<div class="row">
-								<div class="col-lg-6">
-									<div class="form-group">
-										<label for="input-id-1" class="col-sm-4 control-label">Label focus</label>
+	<!--<div id="filters.panel" class="panel panel-default">-->
+		<!--<div class="panel-heading">-->
+			<!--<paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>-->
+			<!--<h3 class="panel-title">-->
+				<!--<em class="fa fa-filter mr-sm"></em>-->
+				<!--Filters-->
+			<!--</h3>-->
+		<!--</div>-->
+		<!--<form method="get" class="form-horizontal">-->
+			<!--<div collapse="filters.panel" class="panel-wrapper">-->
+				<!--<div class="panel-body pb">-->
+					<!--<div class="row">-->
+						<!--<div class="col-lg-10">-->
+							<!--<div class="row">-->
+								<!--<div class="col-lg-6">-->
+									<!--<div class="form-group">-->
+										<!--<label for="input-id-1" class="col-sm-4 control-label">Label focus</label>-->
 
-										<div class="col-sm-8">
-											<input id="input-id-1" type="text" class="form-control"/>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<label class="col-sm-4 control-label">Select</label>
+										<!--<div class="col-sm-8">-->
+											<!--<input id="input-id-1" type="text" class="form-control"/>-->
+										<!--</div>-->
+									<!--</div>-->
+								<!--</div>-->
+								<!--<div class="col-lg-6">-->
+									<!--<div class="form-group">-->
+										<!--<label class="col-sm-4 control-label">Select</label>-->
 
-										<div class="col-sm-8">
-											<select name="account" class="form-control"></select>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-2 text-center">
-							<fieldset>
-								<div class="form-group">
-									<button type="submit" class="btn btn-default">
-										<em class="icon-refresh mr-sm"></em>
-										Reset
-									</button>
-									<button type="submit" class="btn btn-primary">
-										<em class="icon-magnifier mr-sm"></em>
-										Search
-									</button>
-								</div>
-							</fieldset>
-						</div>
-					</div>
-				</div>
-			</div>
-		</form>
-	</div>
+										<!--<div class="col-sm-8">-->
+											<!--<select name="account" class="form-control"></select>-->
+										<!--</div>-->
+									<!--</div>-->
+								<!--</div>-->
+							<!--</div>-->
+						<!--</div>-->
+						<!--<div class="col-lg-2 text-center">-->
+							<!--<fieldset>-->
+								<!--<div class="form-group">-->
+									<!--<button type="submit" class="btn btn-default">-->
+										<!--<em class="icon-refresh mr-sm"></em>-->
+										<!--Reset-->
+									<!--</button>-->
+									<!--<button type="submit" class="btn btn-primary">-->
+										<!--<em class="icon-magnifier mr-sm"></em>-->
+										<!--Search-->
+									<!--</button>-->
+								<!--</div>-->
+							<!--</fieldset>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</form>-->
+	<!--</div>-->
 
 	<div class="panel panel-default">
 
