AC-232 Add russian language(instead of Spanish)

--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -1,4 +1,4 @@
-<h3>
+<h3 translate="dashboard.DASHBOARD">
     <em class="icon-speedometer mr"></em>
     Dashboard
 </h3>
@@ -27,7 +27,7 @@
 								</div>
 							</div>
 						</div>
-						<small>application<span ng-if="statistics.applicationsState.online > 1">s</span></small>
+						<small translate="dashboard.application.APPLICATION">application<span ng-if="statistics.applicationsState.online > 1">s</span></small>
 					</div>
 					<div class="text-uppercase">Online</div>
 				</div>
