--- a/web/assets/source/html/ngdialog/profile.html
+++ b/web/assets/source/html/ngdialog/profile.html
@@ -1,6 +1,6 @@
 <div ng-class="{'whirl traditional': inLoading}">
 
-	<h3 class="mt0 mb-lg"><em class="icon-user"></em> Edit profile</h3>
+	<h3 class="mt0 mb-lg" ><em class="icon-user"></em><span translate="user.EDIT_PROFILE"> Edit profile</span></h3>
 
 	<div ng-repeat="error in errors track by $index" class="alert alert-danger text-center">{{ error }}</div>
 
@@ -8,22 +8,22 @@
 
 		<div class="form-group">
 
-			<label class="col-lg-3 control-label">Username</label>
+			<label class="col-lg-3 control-label" translate="user.LOGIN">Login</label>
 
 			<div class="col-lg-9">
 				<input ng-model="username" type="text" name="username" class="form-control" required="required" />
-				<span ng-show="profile.username.$dirty && profile.username.$error.required" class="text-danger">This field is required</span>
+				<span ng-show="profile.username.$dirty && profile.username.$error.required" class="text-danger" translate="validator.FIELD_REQUIRED">This field is required</span>
 			</div>
 
 		</div>
 
 		<div class="form-group">
 
-			<label class="col-lg-3 control-label">Full name</label>
+			<label class="col-lg-3 control-label" translate="user.FULLNAME">Full name</label>
 
 			<div class="col-lg-9">
 				<input ng-model="fullName" type="text" name="fullName" class="form-control" required="required" />
-				<span ng-show="profile.fullName.$dirty && profile.fullName.$error.required" class="text-danger">This field is required</span>
+				<span ng-show="profile.fullName.$dirty && profile.fullName.$error.required" class="text-danger" translate="validator.FIELD_REQUIRED">This field is required</span>
 			</div>
 
 		</div>
@@ -34,8 +34,8 @@
 
 			<div class="col-lg-9">
 				<input ng-model="email" type="email" name="email" class="form-control" required="required" />
-				<span ng-show="profile.email.$dirty && profile.email.$error.required" class="text-danger">This field is required</span>
-				<span ng-show="profile.email.$dirty && profile.email.$error.email" class="text-danger">Not valid email</span>
+				<span ng-show="profile.email.$dirty && profile.email.$error.required" class="text-danger" translate="validator.FIELD_REQUIRED">This field is required</span>
+				<span ng-show="profile.email.$dirty && profile.email.$error.email" class="text-danger" translate="validator.NOT_VALID_EMAIL">Not valid email</span>
 			</div>
 
 		</div>
@@ -44,11 +44,11 @@
 
 			<div class="col-lg-offset-3 col-lg-9">
 
-				<button ng-click="save()" ng-disabled="isSubmitDisabled || profile.$invalid" class="btn btn-primary">
+				<button ng-click="save()" ng-disabled="isSubmitDisabled || profile.$invalid" class="btn btn-primary" translate="general.SAVE">
 					<em class="icon-check"></em> Save
 				</button>
 
-				<button ng-click="close()" class="btn btn-default">
+				<button ng-click="close()" class="btn btn-default" translate="general.CANCEL">
 					<em class="icon-ban"></em> Cancel
 				</button>
 
