AC-204 Connect cluster status charts with statistics service

--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -151,7 +151,7 @@
 
 								<div>
 									<canvas barchart="" options="barOptions" data="barData"
-											responsive="true" height="300px"></canvas>
+											responsive="true" height="267"></canvas>
 								</div>
 							</div>
 						</div>
@@ -183,7 +183,7 @@
 
 						<div ng-show="lineData" collapse="panelChart1" class="panel-wrapperl">
 							<div class="panel-body">
-								<flot dataset="lineData" options="lineOptions" height="300px"></flot>
+								<flot dataset="lineData" options="lineOptions" height="300"></flot>
 							</div>
 						</div>
 					</div>
