AC-204 Connect cluster status charts with statistics service

--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -289,7 +289,7 @@
 					<p class="text-muted">
 						<em class="icon-cloud-upload mr-sm"></em>
 						<span>Received from all applications</span>
-						<span class="text-dark">164 customers</span>
+						<span class="text-dark">{{ count }} customers</span>
 					</p>
 				</div>
 			</div>
@@ -313,7 +313,7 @@
 						<p class="text-muted">
 							<em class="icon-cloud-upload mr-sm"></em>
 							<span>Received from all applications</span>
-							<span class="text-dark">386 emails</span>
+							<span class="text-dark">{{ count }} emails</span>
 						</p>
 					</div>
 				</div>
