--- a/web/assets/source/html/table-ngtable.html
+++ b/web/assets/source/html/table-ngtable.html
@@ -11,16 +11,56 @@
          Filters
       </h3>
    </div>
-   <div ng-controller="FormBuilderCtrl as vm" class="form-horizontal">
+   <form method="get" ng-controller="FormDemoCtrl as form" class="form-horizontal">
       <div collapse="filters.panel" class="panel-wrapper">
          <div class="panel-body pb">
             <div class="row">
                <div class="col-lg-10">
                   <div class="row">
-                     <form-builder data-item="filter" ng-model="vm.formObj"></form-builder>
+                     <div class="col-lg-6">
+                        <div class="form-group">
+                           <label for="input-id-1" class="col-sm-4 control-label">Label focus</label>
+                           <div class="col-sm-8">
+                              <input id="input-id-1" type="text" class="form-control" />
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-lg-6">
+                        <div class="form-group">
+                           <label class="col-sm-4 control-label">Select</label>
+                           <div class="col-sm-8">
+                              <select name="account" class="form-control">
+                                 <option>Option 1</option>
+                                 <option>Option 2</option>
+                                 <option>Option 3</option>
+                                 <option>Option 4</option>
+                              </select>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-lg-6">
+                        <div class="form-group">
+                           <label class="col-sm-4 control-label">Chosen Ajax</label>
+                           <div class="col-sm-8">
+                              <select chosen="" ng-model="state" ng-options="s for s in form.states" width="'100%'" class="chosen-select input-md">
+                                 <option value=""></option>
+                              </select>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-lg-6">
+                        <div class="form-group">
+                           <label class="col-sm-4 control-label">Chosen Ajax</label>
+                           <div class="col-sm-8">
+                              <select chosen="" ng-model="state" ng-options="s for s in form.states" width="'100%'" class="chosen-select input-md">
+                                 <option value=""></option>
+                              </select>
+                           </div>
+                        </div>
+                     </div>
                   </div>
                </div>
-               <!--<div class="col-lg-2 text-center">
+               <div class="col-lg-2 text-center">
                   <fieldset>
                      <div class="form-group">
                         <button type="submit" class="btn btn-default">
@@ -33,11 +73,11 @@
                         </button>
                      </div>
                   </fieldset>
-               </div>-->
+               </div>
             </div>
          </div>
       </div>
-   </div>
+   </form>
 </div>
 <div class="panel panel-default">
    <div class="panel-heading pb0">
