AC-231 Create client filters builder

--- a/web/assets/source/html/grid-template.html
+++ b/web/assets/source/html/grid-template.html
@@ -3,7 +3,7 @@
 	Locales
 </h3>
 
-<div ng-controller="FormBuilderCtrl as vm">
+<div ng-controller="FormBuilderController as vm">
 
 	<div id="filters.panel" class="panel panel-default">
 		<div class="panel-heading">
