--- a/web/assets/source/html/locales.html
+++ b/web/assets/source/html/locales.html
@@ -8,7 +8,7 @@
 	<div id="filters.panel" class="panel panel-default">
 		<div class="panel-heading">
 			<paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
-			<h3 class="panel-title" translate="general.FILTERS">
+			<h3 class="panel-title" translate="admin.general.FILTERS">
 				<em class="fa fa-filter mr-sm"></em>
 				Filters
 			</h3>
@@ -21,7 +21,7 @@
 							<div class="row">
 								<div class="col-lg-6">
 									<div class="form-group">
-										<label for="input-id-1" class="col-sm-4 control-label" translate="general.LABEL_FOCUS">Label focus</label>
+										<label for="input-id-1" class="col-sm-4 control-label" translate="admin.general.LABEL_FOCUS">Label focus</label>
 
 										<div class="col-sm-8">
 											<input id="input-id-1" type="text" class="form-control"/>
@@ -30,7 +30,7 @@
 								</div>
 								<div class="col-lg-6">
 									<div class="form-group">
-										<label class="col-sm-4 control-label" translate="general.SELECT">Select</label>
+										<label class="col-sm-4 control-label" translate="admin.general.SELECT">Select</label>
 
 										<div class="col-sm-8">
 											<select name="account" class="form-control"></select>
@@ -42,11 +42,11 @@
 						<div class="col-lg-2 text-center">
 							<fieldset>
 								<div class="form-group">
-									<button type="submit" class="btn btn-default" translate="general.RESET">
+									<button type="submit" class="btn btn-default" translate="admin.general.RESET">
 										<em class="icon-refresh mr-sm"></em>
 										Reset
 									</button>
-									<button type="submit" class="btn btn-primary" translate="general.SEARCH">
+									<button type="submit" class="btn btn-primary" translate="admin.general.SEARCH">
 										<em class="icon-magnifier mr-sm"></em>
 										Search
 									</button>
@@ -118,7 +118,7 @@
 			<div class="row mt-sm mb0">
 
 				<div class="col-xs-6">
-					<h3 class="panel-title mt" translate="general.DATA_LIST">
+					<h3 class="panel-title mt" translate="admin.general.DATA_LIST">
 						<em class="icon-layers mr-sm"></em>
 						Data list
 					</h3>
