--- a/web/assets/source/html/users/login.html
+++ b/web/assets/source/html/users/login.html
@@ -27,8 +27,8 @@
 						class="form-control"
 					/>
 					<span class="fa fa-envelope form-control-feedback text-muted"></span>
-					<span ng-show="form.username.$dirty && form.username.$error.required" class="text-danger" translate="validator.FIELD_REQUIRED">This field is required</span>
-					<span ng-show="form.username.$dirty && form.username.$error.username" class="text-danger" translate="validator.NOT_VALID_EMAIL">This field must be a valid username address</span>
+					<span ng-show="form.username.$dirty && form.username.$error.required" class="text-danger" translate="validators.FIELD_REQUIRED">This field is required</span>
+					<span ng-show="form.username.$dirty && form.username.$error.username" class="text-danger" translate="validators.NOT_VALID_EMAIL">This field must be a valid username address</span>
 				</div>
 
 				<div class="form-group has-feedback">
@@ -41,7 +41,7 @@
 							class="form-control"
 					/>
 					<span class="fa fa-lock form-control-feedback text-muted"></span>
-					<span ng-show="form.password.$dirty && form.password.$error.required" class="text-danger" translate="validator.FIELD_REQUIRED">This field is required</span>
+					<span ng-show="form.password.$dirty && form.password.$error.required" class="text-danger" translate="validators.FIELD_REQUIRED">This field is required</span>
 				</div>
 
 				<div class="clearfix">
