AC-204 Connect cluster status charts with statistics service

--- a/web/assets/source/html/locales.html
+++ b/web/assets/source/html/locales.html
@@ -71,7 +71,7 @@
 					<li>
 						<a href="#">
 							<em class="icon-note mr-sm"></em>
-							Edit user
+							Edit locale
 						</a>
 					</li>
 					<li class="divider"></li>
@@ -84,20 +84,13 @@
 					<li>
 						<a href="#">
 							<em class="icon-lock mr-sm"></em>
-							Disable user
+							Disable locale
 						</a>
 					</li>
 					<li class="divider"></li>
 					<li>
 						<a href="#">
-							<em class="icon-key mr-sm"></em>
-							Reset password
-						</a>
-					</li>
-					<li class="divider"></li>
-					<li>
-						<a href="#">
-							<em class="icon-user-unfollow mr-sm"></em>
+							<em class="fa fa-remove mr-sm"></em>
 							Delete
 						</a>
 					</li>
@@ -126,26 +119,21 @@
 
 				<div class="col-xs-6">
 					<div class="btn-group pull-right">
-						<button type="button" class="btn btn-sm btn-danger" tooltip="Delete users">
-							<em class="icon-user-unfollow"></em>
+						<button type="button" class="btn btn-sm btn-danger" tooltip="Delete locales">
+							<em class="fa fa-remove"></em>
 						</button>
 					</div>
 					<div class="btn-group pull-right mr">
-						<button type="button" class="btn btn-sm btn-primary" tooltip="Reset password">
-							<em class="icon-key"></em>
-						</button>
-					</div>
-					<div class="btn-group pull-right mr">
-						<button type="button" class="btn btn-sm btn-default" tooltip="Enable users">
+						<button type="button" class="btn btn-sm btn-default" tooltip="Enable locales">
 							<em class="icon-lock-open"></em>
 						</button>
-						<button type="button" class="btn btn-sm btn-default" tooltip="Disable users">
+						<button type="button" class="btn btn-sm btn-default" tooltip="Disable locales">
 							<em class="icon-lock"></em>
 						</button>
 					</div>
 					<div class="btn-group pull-right mr">
-						<button type="button" class="btn btn-sm btn-success" tooltip="Add new user">
-							<em class="icon-user-follow"></em>
+						<button type="button" class="btn btn-sm btn-success" tooltip="Add new locale">
+							<em class="fa fa-plus"></em>
 						</button>
 					</div>
 				</div>
