AC-232 Add russian language(instead of Spanish)

--- a/web/assets/source/html/grid-template.html
+++ b/web/assets/source/html/grid-template.html
@@ -1,4 +1,4 @@
-<h3>
+<h3 translate="locales.LOCALES">
 	<em class="fa fa-language mr"></em>
 	Locales
 </h3>
@@ -7,7 +7,7 @@
 
 		<div id="filters.panel" class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="panel-title">
+				<h3 class="panel-title" translate="admin.general.FILTERS">
 					<em class="fa fa-filter mr-sm"></em>
 					Filters
 				</h3>
@@ -86,7 +86,7 @@
 				<div class="row mt-sm mb0">
 
 					<div class="col-xs-6">
-						<h3 class="panel-title mt">
+						<h3 class="panel-title mt" translate="admin.general.DATA_LIST">
 							<em class="icon-layers mr-sm"></em>
 							Data list
 						</h3>
