--- a/web/assets/source/html/users/login.html
+++ b/web/assets/source/html/users/login.html
@@ -10,7 +10,7 @@
 
 		<div class="panel-body" ng-class="{'whirl traditional': inLoading}">
 
-			<p class="text-center pv" >SIGN IN TO CONTINUE.</p>
+			<p class="text-center pv" translate="user.SIGN_IN_TO_CONTINUE">SIGN IN TO CONTINUE.</p>
 
 			<form role="form" ng-submit="submit()" name="form" novalidate="" class="form-validate mb-lg">
 
@@ -46,11 +46,13 @@
 
 				<div class="clearfix">
 					<div class="checkbox c-checkbox pull-left mt0">
-						<label translate="user.REMEMBER_ME">
+						<label>
 							<input type="checkbox" value="" name="remember" ng-model="remember" checked="{{ remember ? 'checked' : false }}" />
-							<span class="fa fa-check"></span>Remember Me
+							<span class="fa fa-check"></span>
 						</label>
+
 					</div>
+					<span translate="user.REMEMBER_ME">Remember Me</span>
 					<div class="pull-right"><a ui-sref="resetting" class="text-muted" translate="user.FORGOT_YOU_PASSWORD">Forgot your password?</a></div>
 				</div>
 
